--- a/HTML/brewFo.html
+++ b/HTML/brewFo.html
@@ -35,12 +35,12 @@
             <div class="modalLogin">
                 <div class="close">&times;</div>
                 <img src="/Extras/logo.png" alt="">
-                <form action="" method="post">
+                <div class="userArea">
                     <input class="userName" type="text" placeholder="User Name" required>
                     <input class="pass" type="password" placeholder="Password" required>
                     <button type="submit">Log In</button>
                     <a href="/HTML/register.html">Click to Create an Account</a></p>
-                </form>
+                </div>
             </div>
         </div>
     </div>
