--- a/HTML/pourLog.html
+++ b/HTML/pourLog.html
@@ -37,7 +37,8 @@
                     <h1>Brewery</h1>
                     <form action="" method="post">
                         <input type="text" placeholder="Brewery Name">
-                        <input type="date" placeholder="">
+                        <label for="date">Date Visited:</label>
+                        <input type="date" id="date">
                         <input type="text" placeholder="City">
                         <input type="text" placeholder="State">
                         <button type="submit">Add</button>
@@ -60,12 +61,12 @@
             <div class="modalLogin">
                 <div class="close">&times;</div>
                 <img src="/Extras/logo.png" alt="">
-                <form action="" method="post">
+                <div class="userArea">
                     <input class="userName" type="text" placeholder="User Name" required>
                     <input class="pass" type="password" placeholder="Password" required>
                     <button type="submit">Log In</button>
                     <a href="/HTML/register.html">Click to Create an Account</a></p>
-                </form>
+                </div>
             </div>
         </div>
     </div>
