--- a/HTML/register.html
+++ b/HTML/register.html
@@ -16,7 +16,7 @@
     <div class="body">
         <div class="navDiv">
             <nav class="navBar">
-                <div class="siteLogo"><a href="index.html"><img src="/Extras/logo.png" alt="" srcset=""></a></div>
+                <div class="siteLogo"><a href="index.html"><img src="/Extras/LogoSmall.png" alt="" srcset=""></a></div>
                     <a href="#" class="toggleMenu">
                         <span class="bar"></span>
                         <span class="bar"></span>
@@ -41,22 +41,23 @@
                     <input type="password" class="regPassword" placeholder="Password" required>
                     <button type="submit">Create Account</button>
                 </div>
+                <a href="#" class="regLog">Click here to Login</a>
             </div>
             <div class="pageImg"></div>
         </div>
         <div class="modalBG">
             <div class="modalLogin">
                 <div class="close">&times;</div>
-                <img src="/Extras/logo.png" alt="">
+                <img src="/Extras/LogoSmall.png" alt="">
                 <div class="userArea">
                     <input class="userName" type="text" placeholder="User Name" required>
                     <input class="pass" type="password" placeholder="Password" required>
-                    <button type="submit">Log In</button>
-                    <a href="/HTML/register.html">Click to Create an Account</a></p>
+                    <button class="loginBut" type="submit">Log In</button>
+                    <a href="/HTML/register.html">Click to Create an Account</a>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="/JAVA/nav.js"></script>
+<script src="/JAVA/register.js"></script>
 </html>
