--- a/HTML/pourLog.html
+++ b/HTML/pourLog.html
@@ -56,7 +56,7 @@
                             <option value="UT">UT</option><option value="VT">VT</option><option value="VA">VA</option><option value="WA">WA</option>
                             <option value="WI">WI</option><option value="WV">WV</option><option value="WY">WY</option><option value="Out of States">Out of States</option>
                         </datalist>
-                        <button type="submit">Add</button>
+                        <button class="brewSub" type="submit">Add</button>
                     </div>
                 </div>
             </div>
@@ -64,10 +64,10 @@
                 <div class="beerForm">
                     <h1>Brews</h1>
                     <div class="userBeer">
-                        <input type="text" placeholder="Beer Name">
-                        <input type="text" placeholder="Beer Type">
-                        <input type="text" placeholder="Maker">
-                        <button type="submit">Add</button>
+                        <input class="beerName" type="text" placeholder="Beer Name">
+                        <input class="beerType" type="text" placeholder="Beer Type">
+                        <input class="maker" type="text" placeholder="Maker">
+                        <button class="beerSub" type="submit">Add</button>
                     </div>
                 </div>
             </div>
@@ -77,8 +77,8 @@
                 <div class="close">&times;</div>
                 <img src="/Extras/LogoSmall.png" alt="">
                 <div class="userArea">
-                    <input class="userName" type="text" placeholder="User Name" required>
-                    <input class="pass" type="password" placeholder="Password" required>
+                    <input class="logUserName" type="text" placeholder="User Name" required>
+                    <input class="logPass" type="password" placeholder="Password" required>
                     <button class="loginBut" type="submit">Log In</button>
                     <a href="/HTML/register.html">Click to Create an Account</a>
                 </div>
