--- a/HTML/register.html
+++ b/HTML/register.html
@@ -50,8 +50,8 @@
                 <div class="close">&times;</div>
                 <img src="/Extras/LogoSmall.png" alt="">
                 <div class="userArea">
-                    <input class="userName" type="text" placeholder="User Name" required>
-                    <input class="pass" type="password" placeholder="Password" required>
+                    <input class="logUserName" type="text" placeholder="User Name" required>
+                    <input class="logPass" type="password" placeholder="Password" required>
                     <button class="loginBut" type="submit">Log In</button>
                     <a href="/HTML/register.html">Click to Create an Account</a>
                 </div>
