Connected Delete Route
Front end delete beer route works

--- a/fullStack/client/pourLog.html
+++ b/fullStack/client/pourLog.html
@@ -73,6 +73,7 @@
                         <input class="type" type="text" placeholder="Beer Type">
                         <input class="maker" type="text" placeholder="Maker">
                         <button class="beerBut" type="submit">Add</button>
+                        <button class="deleteBeer" type="submit">Delete</button>
                     </div>
                 </div>
             </div>
