PourLog semi completion, CSS cleanup

--- a/HTML/register.html
+++ b/HTML/register.html
@@ -32,6 +32,7 @@
                 </div>
             </nav>
         </div>
+        <h1 class="header">Register</h1>
         <div class="mainCont">
             <div class="registerDiv">
                 <h1>Create Account</h1>
