--- a/HTML/register.html
+++ b/HTML/register.html
@@ -40,7 +40,7 @@
                     <input type="email" class="regEmail" placeholder="@Email" required>
                     <input type="text" class="regUserName" placeholder="User Name" required>
                     <input type="password" class="regPassword" placeholder="Password" required>
-                    <button type="submit">Create Account</button>
+                    <button class="regSub" type="submit">Create Account</button>
                 </div>
                 <a href="#" class="regLog">Click here to Login</a>
             </div>
